--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,61 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+h1 {
+  font-size: 32px;
+  border-bottom: 2px solid #56526e;
+  margin-bottom: 15px;
+  font-weight: bold;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+h2 {
+  font-size: 26px;
+  border-bottom: 1px solid #56526e;
+  margin-bottom: 12px;
+  font-weight: bold;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+h3 {
+  font-size: 18px;
+  font-weight: bold;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+p {
+  margin-bottom: 8px;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+code {
+  background-color: #232136;
+  padding: 3px 10px 3px 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+pre {
+  background-color: #232136;
+  padding: 10px;
+  margin: 20px 0 20px 0;
 }
-
-.card {
-  padding: 2em;
+a {
+  color: #3e8fb0;
+  text-decoration: underline;
 }
-
-.read-the-docs {
-  color: #888;
+blockquote {
+  color: #9ccfd8;
+  margin-left: 30px;
+  border-left: 5px solid #3e8fb0;
+  padding-left: 10px;
+}
+table,
+th,
+td {
+  border: 1px solid #9ccfd8;
+}
+table {
+  margin: 10px 0 10px 0;
+}
+td {
+  padding: 5px 10px 5px 10px;
+}
+ul li {
+  margin-left: 20px;
+  list-style-type: circle;
+}
+ol li {
+  margin-left: 20px;
+  list-style-type: decimal;
+}
+img {
+  margin: 30px 50px 30px 50px;
+  max-width: 80vw;
 }
